parser.output
Terminales no usados en la gramática

   tk_not


Estado 26 conflictos: 1 desplazamiento/reducción
Estado 28 conflictos: 1 desplazamiento/reducción
Estado 30 conflictos: 1 desplazamiento/reducción
Estado 32 conflictos: 1 desplazamiento/reducción
Estado 34 conflictos: 8 desplazamiento/reducción
Estado 37 conflictos: 5 desplazamiento/reducción
Estado 45 conflictos: 1 desplazamiento/reducción
Estado 50 conflictos: 1 desplazamiento/reducción
Estado 52 conflictos: 2 desplazamiento/reducción
Estado 114 conflictos: 2 desplazamiento/reducción
Estado 115 conflictos: 2 desplazamiento/reducción
Estado 116 conflictos: 2 desplazamiento/reducción
Estado 117 conflictos: 2 desplazamiento/reducción
Estado 118 conflictos: 2 desplazamiento/reducción


Gramática

    0 $accept: INICIO $end

    1 INICIO: tk_public tk_main llavei LISTA_CUERPO llaved

    2 LISTA_CUERPO: LISTA_CUERPO CUERPO
    3             | CUERPO

    4 CUERPO: LISTA_DECLARACION
    5       | LISTA_ASIGNACION
    6       | LISTA_IMPRIMIR
    7       | LISTA_MOSTRAR
    8       | LISTA_IF
    9       | LISTA_FOR
   10       | LISTA_REPETIR

   11 LISTA_REPETIR: LISTA_REPETIR REPETIR
   12              | REPETIR

   13 REPETIR: tk_repetir pari CONT_VALOR pard llavei LISTA_CUERPO llaved
   14        | tk_repetir pari CONT_VALOR pard llavei llaved

   15 LISTA_FOR: LISTA_FOR FOR
   16          | FOR

   17 FOR: tk_para pari FOR_COND CONT_VALOR puntocoma OPERACION pard llavei LISTA_CUERPO llaved
   18    | tk_para pari FOR_COND CONT_VALOR puntocoma OPERACION pard llavei llaved

   19 FOR_COND: ASIGNACION
   20         | DECLARACION

   21 LISTA_MOSTRAR: LISTA_MOSTRAR MOSTRAR
   22              | MOSTRAR

   23 MOSTRAR: tk_show pari CONT_VALOR coma LISTA_VALORES pard puntocoma

   24 LISTA_IMPRIMIR: LISTA_IMPRIMIR IMPRIMIR
   25               | IMPRIMIR

   26 IMPRIMIR: tk_imprimir pari LISTA_VALORES pard puntocoma

   27 LISTA_VALORES: LISTA_VALORES suma VALORES
   28              | VALORES

   29 VALORES: VALOR

   30 LISTA_ASIGNACION: LISTA_ASIGNACION ASIGNACION
   31                 | ASIGNACION

   32 ASIGNACION: LISTA_VAR puntocoma

   33 LISTA_VAR: LISTA_VAR tk_igual CONT_VALOR
   34          | CONT_VALOR

   35 LISTA_DECLARACION: LISTA_DECLARACION DECLARACION
   36                  | DECLARACION

   37 DECLARACION: TIPO_DATO LISTA_ID tk_igual CONT_VALOR puntocoma
   38            | TIPO_DATO LISTA_ID puntocoma
   39            | TIPO_DATO tk_arreglo LISTA_ID LISTA_DIMENSION puntocoma
   40            | TIPO_DATO tk_arreglo LISTA_ID LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma
   41            | TIPO_DATO tk_arreglo LISTA_ID LISTA_DIMENSION tk_igual llavei LISTA_FILA llaved puntocoma

   42 ARRAY: ARRAY coma llavei LISTA_FILA llaved
   43      | llavei LISTA_FILA llaved

   44 LISTA_FILA: LISTA_FILA coma CONT_VALOR
   45           | CONT_VALOR

   46 LISTA_DIMENSION: LISTA_DIMENSION cori OPERACION cord
   47                | cori OPERACION cord

   48 TIPO_DATO: tk_string
   49          | tk_bool
   50          | tk_int
   51          | tk_double
   52          | tk_char

   53 LISTA_ID: LISTA_ID coma identificador
   54         | identificador

   55 CONT_VALOR: A

   56 A: A tk_and A
   57  | A tk_or A
   58  | A tk_mayorque A
   59  | A tk_menorque A
   60  | A tk_mayorigual A
   61  | A tk_menorigual A
   62  | A tk_igualacion A
   63  | A tk_diferenciacion A
   64  | pari A pard
   65  | OPERACION

   66 OPERACION: E

   67 E: E suma E
   68  | E menos E
   69  | E multi E
   70  | E division E
   71  | E potencia E
   72  | menos E
   73  | pari E pard
   74  | E aumento
   75  | E decremento
   76  | VALOR

   77 VALOR: identificador
   78      | cadena
   79      | entero
   80      | decimal
   81      | booleano
   82      | caracter
   83      | identificador LISTA_DIMENSION

   84 LISTA_IF: LISTA_IF SI
   85         | SI

   86 SI: tk_if pari CONT_VALOR pard llavei LISTA_CUERPO ELSE
   87   | tk_if pari CONT_VALOR pard llavei ELSE

   88 ELSE: llaved tk_else SI
   89     | llaved tk_else llavei LISTA_CUERPO llaved
   90     | llaved tk_else llavei llaved
   91     | llaved


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
tk_int (258) 50
tk_double (259) 51
tk_bool (260) 49
tk_char (261) 52
tk_string (262) 48
tk_not (263)
tk_igual (264) 33 37 40 41
tk_menorque (265) 59
tk_mayorque (266) 58
tk_or (267) 57
tk_and (268) 56
tk_igualacion (269) 62
tk_diferenciacion (270) 63
tk_menorigual (271) 61
tk_mayorigual (272) 60
aumento (273) 74
decremento (274) 75
cori (275) 46 47
cord (276) 46 47
coma (277) 23 42 44 53
identificador (278) 53 54 77 83
entero (279) 79
decimal (280) 80
caracter (281) 82
booleano (282) 81
cadena (283) 78
pari (284) 13 14 17 18 23 26 64 73 86 87
pard (285) 13 14 17 18 23 26 64 73 86 87
suma (286) 27 67
menos (287) 68 72
multi (288) 69
division (289) 70
potencia (290) 71
puntocoma (291) 17 18 23 26 32 37 38 39 40 41
llavei (292) 1 13 14 17 18 40 41 42 43 86 87 89 90
llaved (293) 1 13 14 17 18 40 41 42 43 88 89 90 91
tk_arreglo (294) 39 40 41
tk_imprimir (295) 26
tk_show (296) 23
tk_if (297) 86 87
tk_else (298) 88 89 90
tk_para (299) 17 18
tk_repetir (300) 13 14
tk_public (301) 1
tk_main (302) 1
UMINUS (303)


No terminales con las reglas donde aparecen

$accept (49)
    en la izquierda: 0
INICIO (50)
    en la izquierda: 1, en la derecha: 0
LISTA_CUERPO (51)
    en la izquierda: 2 3, en la derecha: 1 2 13 17 86 89
CUERPO (52)
    en la izquierda: 4 5 6 7 8 9 10, en la derecha: 2 3
LISTA_REPETIR (53)
    en la izquierda: 11 12, en la derecha: 10 11
REPETIR (54)
    en la izquierda: 13 14, en la derecha: 11 12
LISTA_FOR (55)
    en la izquierda: 15 16, en la derecha: 9 15
FOR (56)
    en la izquierda: 17 18, en la derecha: 15 16
FOR_COND (57)
    en la izquierda: 19 20, en la derecha: 17 18
LISTA_MOSTRAR (58)
    en la izquierda: 21 22, en la derecha: 7 21
MOSTRAR (59)
    en la izquierda: 23, en la derecha: 21 22
LISTA_IMPRIMIR (60)
    en la izquierda: 24 25, en la derecha: 6 24
IMPRIMIR (61)
    en la izquierda: 26, en la derecha: 24 25
LISTA_VALORES (62)
    en la izquierda: 27 28, en la derecha: 23 26 27
VALORES (63)
    en la izquierda: 29, en la derecha: 27 28
LISTA_ASIGNACION (64)
    en la izquierda: 30 31, en la derecha: 5 30
ASIGNACION (65)
    en la izquierda: 32, en la derecha: 19 30 31
LISTA_VAR (66)
    en la izquierda: 33 34, en la derecha: 32 33
LISTA_DECLARACION (67)
    en la izquierda: 35 36, en la derecha: 4 35
DECLARACION (68)
    en la izquierda: 37 38 39 40 41, en la derecha: 20 35 36
ARRAY (69)
    en la izquierda: 42 43, en la derecha: 40 42
LISTA_FILA (70)
    en la izquierda: 44 45, en la derecha: 41 42 43 44
LISTA_DIMENSION (71)
    en la izquierda: 46 47, en la derecha: 39 40 41 46 83
TIPO_DATO (72)
    en la izquierda: 48 49 50 51 52, en la derecha: 37 38 39 40 41
LISTA_ID (73)
    en la izquierda: 53 54, en la derecha: 37 38 39 40 41 53
CONT_VALOR (74)
    en la izquierda: 55, en la derecha: 13 14 17 18 23 33 34 37 44
    45 86 87
A (75)
    en la izquierda: 56 57 58 59 60 61 62 63 64 65, en la derecha:
    55 56 57 58 59 60 61 62 63 64
OPERACION (76)
    en la izquierda: 66, en la derecha: 17 18 46 47 65
E (77)
    en la izquierda: 67 68 69 70 71 72 73 74 75 76, en la derecha:
    66 67 68 69 70 71 72 73 74 75
VALOR (78)
    en la izquierda: 77 78 79 80 81 82 83, en la derecha: 29 76
LISTA_IF (79)
    en la izquierda: 84 85, en la derecha: 8 84
SI (80)
    en la izquierda: 86 87, en la derecha: 84 85 88
ELSE (81)
    en la izquierda: 88 89 90 91, en la derecha: 86 87


Estado 0

    0 $accept: . INICIO $end

    tk_public  desplazar e ir al estado 1

    INICIO  ir al estado 2


Estado 1

    1 INICIO: tk_public . tk_main llavei LISTA_CUERPO llaved

    tk_main  desplazar e ir al estado 3


Estado 2

    0 $accept: INICIO . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 INICIO: tk_public tk_main . llavei LISTA_CUERPO llaved

    llavei  desplazar e ir al estado 5


Estado 4

    0 $accept: INICIO $end .

    $default  aceptar


Estado 5

    1 INICIO: tk_public tk_main llavei . LISTA_CUERPO llaved

    tk_int         desplazar e ir al estado 6
    tk_double      desplazar e ir al estado 7
    tk_bool        desplazar e ir al estado 8
    tk_char        desplazar e ir al estado 9
    tk_string      desplazar e ir al estado 10
    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18
    tk_imprimir    desplazar e ir al estado 19
    tk_show        desplazar e ir al estado 20
    tk_if          desplazar e ir al estado 21
    tk_para        desplazar e ir al estado 22
    tk_repetir     desplazar e ir al estado 23

    LISTA_CUERPO       ir al estado 24
    CUERPO             ir al estado 25
    LISTA_REPETIR      ir al estado 26
    REPETIR            ir al estado 27
    LISTA_FOR          ir al estado 28
    FOR                ir al estado 29
    LISTA_MOSTRAR      ir al estado 30
    MOSTRAR            ir al estado 31
    LISTA_IMPRIMIR     ir al estado 32
    IMPRIMIR           ir al estado 33
    LISTA_ASIGNACION   ir al estado 34
    ASIGNACION         ir al estado 35
    LISTA_VAR          ir al estado 36
    LISTA_DECLARACION  ir al estado 37
    DECLARACION        ir al estado 38
    TIPO_DATO          ir al estado 39
    CONT_VALOR         ir al estado 40
    A                  ir al estado 41
    OPERACION          ir al estado 42
    E                  ir al estado 43
    VALOR              ir al estado 44
    LISTA_IF           ir al estado 45
    SI                 ir al estado 46


Estado 6

   50 TIPO_DATO: tk_int .

    $default  reduce usando la regla 50 (TIPO_DATO)


Estado 7

   51 TIPO_DATO: tk_double .

    $default  reduce usando la regla 51 (TIPO_DATO)


Estado 8

   49 TIPO_DATO: tk_bool .

    $default  reduce usando la regla 49 (TIPO_DATO)


Estado 9

   52 TIPO_DATO: tk_char .

    $default  reduce usando la regla 52 (TIPO_DATO)


Estado 10

   48 TIPO_DATO: tk_string .

    $default  reduce usando la regla 48 (TIPO_DATO)


Estado 11

   77 VALOR: identificador .
   83      | identificador . LISTA_DIMENSION

    cori  desplazar e ir al estado 47

    $default  reduce usando la regla 77 (VALOR)

    LISTA_DIMENSION  ir al estado 48


Estado 12

   79 VALOR: entero .

    $default  reduce usando la regla 79 (VALOR)


Estado 13

   80 VALOR: decimal .

    $default  reduce usando la regla 80 (VALOR)


Estado 14

   82 VALOR: caracter .

    $default  reduce usando la regla 82 (VALOR)


Estado 15

   81 VALOR: booleano .

    $default  reduce usando la regla 81 (VALOR)


Estado 16

   78 VALOR: cadena .

    $default  reduce usando la regla 78 (VALOR)


Estado 17

   64 A: pari . A pard
   73 E: pari . E pard

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    A          ir al estado 49
    OPERACION  ir al estado 42
    E          ir al estado 50
    VALOR      ir al estado 44


Estado 18

   72 E: menos . E

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 51
    menos          desplazar e ir al estado 18

    E      ir al estado 52
    VALOR  ir al estado 44


Estado 19

   26 IMPRIMIR: tk_imprimir . pari LISTA_VALORES pard puntocoma

    pari  desplazar e ir al estado 53


Estado 20

   23 MOSTRAR: tk_show . pari CONT_VALOR coma LISTA_VALORES pard puntocoma

    pari  desplazar e ir al estado 54


Estado 21

   86 SI: tk_if . pari CONT_VALOR pard llavei LISTA_CUERPO ELSE
   87   | tk_if . pari CONT_VALOR pard llavei ELSE

    pari  desplazar e ir al estado 55


Estado 22

   17 FOR: tk_para . pari FOR_COND CONT_VALOR puntocoma OPERACION pard llavei LISTA_CUERPO llaved
   18    | tk_para . pari FOR_COND CONT_VALOR puntocoma OPERACION pard llavei llaved

    pari  desplazar e ir al estado 56


Estado 23

   13 REPETIR: tk_repetir . pari CONT_VALOR pard llavei LISTA_CUERPO llaved
   14        | tk_repetir . pari CONT_VALOR pard llavei llaved

    pari  desplazar e ir al estado 57


Estado 24

    1 INICIO: tk_public tk_main llavei LISTA_CUERPO . llaved
    2 LISTA_CUERPO: LISTA_CUERPO . CUERPO

    tk_int         desplazar e ir al estado 6
    tk_double      desplazar e ir al estado 7
    tk_bool        desplazar e ir al estado 8
    tk_char        desplazar e ir al estado 9
    tk_string      desplazar e ir al estado 10
    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18
    llaved         desplazar e ir al estado 58
    tk_imprimir    desplazar e ir al estado 19
    tk_show        desplazar e ir al estado 20
    tk_if          desplazar e ir al estado 21
    tk_para        desplazar e ir al estado 22
    tk_repetir     desplazar e ir al estado 23

    CUERPO             ir al estado 59
    LISTA_REPETIR      ir al estado 26
    REPETIR            ir al estado 27
    LISTA_FOR          ir al estado 28
    FOR                ir al estado 29
    LISTA_MOSTRAR      ir al estado 30
    MOSTRAR            ir al estado 31
    LISTA_IMPRIMIR     ir al estado 32
    IMPRIMIR           ir al estado 33
    LISTA_ASIGNACION   ir al estado 34
    ASIGNACION         ir al estado 35
    LISTA_VAR          ir al estado 36
    LISTA_DECLARACION  ir al estado 37
    DECLARACION        ir al estado 38
    TIPO_DATO          ir al estado 39
    CONT_VALOR         ir al estado 40
    A                  ir al estado 41
    OPERACION          ir al estado 42
    E                  ir al estado 43
    VALOR              ir al estado 44
    LISTA_IF           ir al estado 45
    SI                 ir al estado 46


Estado 25

    3 LISTA_CUERPO: CUERPO .

    $default  reduce usando la regla 3 (LISTA_CUERPO)


Estado 26

   10 CUERPO: LISTA_REPETIR .
   11 LISTA_REPETIR: LISTA_REPETIR . REPETIR

    tk_repetir  desplazar e ir al estado 23

    tk_repetir  [reduce usando la regla 10 (CUERPO)]
    $default    reduce usando la regla 10 (CUERPO)

    REPETIR  ir al estado 60


Estado 27

   12 LISTA_REPETIR: REPETIR .

    $default  reduce usando la regla 12 (LISTA_REPETIR)


Estado 28

    9 CUERPO: LISTA_FOR .
   15 LISTA_FOR: LISTA_FOR . FOR

    tk_para  desplazar e ir al estado 22

    tk_para   [reduce usando la regla 9 (CUERPO)]
    $default  reduce usando la regla 9 (CUERPO)

    FOR  ir al estado 61


Estado 29

   16 LISTA_FOR: FOR .

    $default  reduce usando la regla 16 (LISTA_FOR)


Estado 30

    7 CUERPO: LISTA_MOSTRAR .
   21 LISTA_MOSTRAR: LISTA_MOSTRAR . MOSTRAR

    tk_show  desplazar e ir al estado 20

    tk_show   [reduce usando la regla 7 (CUERPO)]
    $default  reduce usando la regla 7 (CUERPO)

    MOSTRAR  ir al estado 62


Estado 31

   22 LISTA_MOSTRAR: MOSTRAR .

    $default  reduce usando la regla 22 (LISTA_MOSTRAR)


Estado 32

    6 CUERPO: LISTA_IMPRIMIR .
   24 LISTA_IMPRIMIR: LISTA_IMPRIMIR . IMPRIMIR

    tk_imprimir  desplazar e ir al estado 19

    tk_imprimir  [reduce usando la regla 6 (CUERPO)]
    $default     reduce usando la regla 6 (CUERPO)

    IMPRIMIR  ir al estado 63


Estado 33

   25 LISTA_IMPRIMIR: IMPRIMIR .

    $default  reduce usando la regla 25 (LISTA_IMPRIMIR)


Estado 34

    5 CUERPO: LISTA_ASIGNACION .
   30 LISTA_ASIGNACION: LISTA_ASIGNACION . ASIGNACION

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    identificador  [reduce usando la regla 5 (CUERPO)]
    entero         [reduce usando la regla 5 (CUERPO)]
    decimal        [reduce usando la regla 5 (CUERPO)]
    caracter       [reduce usando la regla 5 (CUERPO)]
    booleano       [reduce usando la regla 5 (CUERPO)]
    cadena         [reduce usando la regla 5 (CUERPO)]
    pari           [reduce usando la regla 5 (CUERPO)]
    menos          [reduce usando la regla 5 (CUERPO)]
    $default       reduce usando la regla 5 (CUERPO)

    ASIGNACION  ir al estado 64
    LISTA_VAR   ir al estado 36
    CONT_VALOR  ir al estado 40
    A           ir al estado 41
    OPERACION   ir al estado 42
    E           ir al estado 43
    VALOR       ir al estado 44


Estado 35

   31 LISTA_ASIGNACION: ASIGNACION .

    $default  reduce usando la regla 31 (LISTA_ASIGNACION)


Estado 36

   32 ASIGNACION: LISTA_VAR . puntocoma
   33 LISTA_VAR: LISTA_VAR . tk_igual CONT_VALOR

    tk_igual   desplazar e ir al estado 65
    puntocoma  desplazar e ir al estado 66


Estado 37

    4 CUERPO: LISTA_DECLARACION .
   35 LISTA_DECLARACION: LISTA_DECLARACION . DECLARACION

    tk_int     desplazar e ir al estado 6
    tk_double  desplazar e ir al estado 7
    tk_bool    desplazar e ir al estado 8
    tk_char    desplazar e ir al estado 9
    tk_string  desplazar e ir al estado 10

    tk_int     [reduce usando la regla 4 (CUERPO)]
    tk_double  [reduce usando la regla 4 (CUERPO)]
    tk_bool    [reduce usando la regla 4 (CUERPO)]
    tk_char    [reduce usando la regla 4 (CUERPO)]
    tk_string  [reduce usando la regla 4 (CUERPO)]
    $default   reduce usando la regla 4 (CUERPO)

    DECLARACION  ir al estado 67
    TIPO_DATO    ir al estado 39


Estado 38

   36 LISTA_DECLARACION: DECLARACION .

    $default  reduce usando la regla 36 (LISTA_DECLARACION)


Estado 39

   37 DECLARACION: TIPO_DATO . LISTA_ID tk_igual CONT_VALOR puntocoma
   38            | TIPO_DATO . LISTA_ID puntocoma
   39            | TIPO_DATO . tk_arreglo LISTA_ID LISTA_DIMENSION puntocoma
   40            | TIPO_DATO . tk_arreglo LISTA_ID LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma
   41            | TIPO_DATO . tk_arreglo LISTA_ID LISTA_DIMENSION tk_igual llavei LISTA_FILA llaved puntocoma

    identificador  desplazar e ir al estado 68
    tk_arreglo     desplazar e ir al estado 69

    LISTA_ID  ir al estado 70


Estado 40

   34 LISTA_VAR: CONT_VALOR .

    $default  reduce usando la regla 34 (LISTA_VAR)


Estado 41

   55 CONT_VALOR: A .
   56 A: A . tk_and A
   57  | A . tk_or A
   58  | A . tk_mayorque A
   59  | A . tk_menorque A
   60  | A . tk_mayorigual A
   61  | A . tk_menorigual A
   62  | A . tk_igualacion A
   63  | A . tk_diferenciacion A

    tk_menorque        desplazar e ir al estado 71
    tk_mayorque        desplazar e ir al estado 72
    tk_or              desplazar e ir al estado 73
    tk_and             desplazar e ir al estado 74
    tk_igualacion      desplazar e ir al estado 75
    tk_diferenciacion  desplazar e ir al estado 76
    tk_menorigual      desplazar e ir al estado 77
    tk_mayorigual      desplazar e ir al estado 78

    $default  reduce usando la regla 55 (CONT_VALOR)


Estado 42

   65 A: OPERACION .

    $default  reduce usando la regla 65 (A)


Estado 43

   66 OPERACION: E .
   67 E: E . suma E
   68  | E . menos E
   69  | E . multi E
   70  | E . division E
   71  | E . potencia E
   74  | E . aumento
   75  | E . decremento

    aumento     desplazar e ir al estado 79
    decremento  desplazar e ir al estado 80
    suma        desplazar e ir al estado 81
    menos       desplazar e ir al estado 82
    multi       desplazar e ir al estado 83
    division    desplazar e ir al estado 84
    potencia    desplazar e ir al estado 85

    $default  reduce usando la regla 66 (OPERACION)


Estado 44

   76 E: VALOR .

    $default  reduce usando la regla 76 (E)


Estado 45

    8 CUERPO: LISTA_IF .
   84 LISTA_IF: LISTA_IF . SI

    tk_if  desplazar e ir al estado 21

    tk_if     [reduce usando la regla 8 (CUERPO)]
    $default  reduce usando la regla 8 (CUERPO)

    SI  ir al estado 86


Estado 46

   85 LISTA_IF: SI .

    $default  reduce usando la regla 85 (LISTA_IF)


Estado 47

   47 LISTA_DIMENSION: cori . OPERACION cord

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 51
    menos          desplazar e ir al estado 18

    OPERACION  ir al estado 87
    E          ir al estado 43
    VALOR      ir al estado 44


Estado 48

   46 LISTA_DIMENSION: LISTA_DIMENSION . cori OPERACION cord
   83 VALOR: identificador LISTA_DIMENSION .

    cori  desplazar e ir al estado 88

    $default  reduce usando la regla 83 (VALOR)


Estado 49

   56 A: A . tk_and A
   57  | A . tk_or A
   58  | A . tk_mayorque A
   59  | A . tk_menorque A
   60  | A . tk_mayorigual A
   61  | A . tk_menorigual A
   62  | A . tk_igualacion A
   63  | A . tk_diferenciacion A
   64  | pari A . pard

    tk_menorque        desplazar e ir al estado 71
    tk_mayorque        desplazar e ir al estado 72
    tk_or              desplazar e ir al estado 73
    tk_and             desplazar e ir al estado 74
    tk_igualacion      desplazar e ir al estado 75
    tk_diferenciacion  desplazar e ir al estado 76
    tk_menorigual      desplazar e ir al estado 77
    tk_mayorigual      desplazar e ir al estado 78
    pard               desplazar e ir al estado 89


Estado 50

   66 OPERACION: E .
   67 E: E . suma E
   68  | E . menos E
   69  | E . multi E
   70  | E . division E
   71  | E . potencia E
   73  | pari E . pard
   74  | E . aumento
   75  | E . decremento

    aumento     desplazar e ir al estado 79
    decremento  desplazar e ir al estado 80
    pard        desplazar e ir al estado 90
    suma        desplazar e ir al estado 81
    menos       desplazar e ir al estado 82
    multi       desplazar e ir al estado 83
    division    desplazar e ir al estado 84
    potencia    desplazar e ir al estado 85

    pard      [reduce usando la regla 66 (OPERACION)]
    $default  reduce usando la regla 66 (OPERACION)


Estado 51

   73 E: pari . E pard

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 51
    menos          desplazar e ir al estado 18

    E      ir al estado 91
    VALOR  ir al estado 44


Estado 52

   67 E: E . suma E
   68  | E . menos E
   69  | E . multi E
   70  | E . division E
   71  | E . potencia E
   72  | menos E .
   74  | E . aumento
   75  | E . decremento

    aumento     desplazar e ir al estado 79
    decremento  desplazar e ir al estado 80

    aumento     [reduce usando la regla 72 (E)]
    decremento  [reduce usando la regla 72 (E)]
    $default    reduce usando la regla 72 (E)


Estado 53

   26 IMPRIMIR: tk_imprimir pari . LISTA_VALORES pard puntocoma

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16

    LISTA_VALORES  ir al estado 92
    VALORES        ir al estado 93
    VALOR          ir al estado 94


Estado 54

   23 MOSTRAR: tk_show pari . CONT_VALOR coma LISTA_VALORES pard puntocoma

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    CONT_VALOR  ir al estado 95
    A           ir al estado 41
    OPERACION   ir al estado 42
    E           ir al estado 43
    VALOR       ir al estado 44


Estado 55

   86 SI: tk_if pari . CONT_VALOR pard llavei LISTA_CUERPO ELSE
   87   | tk_if pari . CONT_VALOR pard llavei ELSE

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    CONT_VALOR  ir al estado 96
    A           ir al estado 41
    OPERACION   ir al estado 42
    E           ir al estado 43
    VALOR       ir al estado 44


Estado 56

   17 FOR: tk_para pari . FOR_COND CONT_VALOR puntocoma OPERACION pard llavei LISTA_CUERPO llaved
   18    | tk_para pari . FOR_COND CONT_VALOR puntocoma OPERACION pard llavei llaved

    tk_int         desplazar e ir al estado 6
    tk_double      desplazar e ir al estado 7
    tk_bool        desplazar e ir al estado 8
    tk_char        desplazar e ir al estado 9
    tk_string      desplazar e ir al estado 10
    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    FOR_COND     ir al estado 97
    ASIGNACION   ir al estado 98
    LISTA_VAR    ir al estado 36
    DECLARACION  ir al estado 99
    TIPO_DATO    ir al estado 39
    CONT_VALOR   ir al estado 40
    A            ir al estado 41
    OPERACION    ir al estado 42
    E            ir al estado 43
    VALOR        ir al estado 44


Estado 57

   13 REPETIR: tk_repetir pari . CONT_VALOR pard llavei LISTA_CUERPO llaved
   14        | tk_repetir pari . CONT_VALOR pard llavei llaved

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    CONT_VALOR  ir al estado 100
    A           ir al estado 41
    OPERACION   ir al estado 42
    E           ir al estado 43
    VALOR       ir al estado 44


Estado 58

    1 INICIO: tk_public tk_main llavei LISTA_CUERPO llaved .

    $default  reduce usando la regla 1 (INICIO)


Estado 59

    2 LISTA_CUERPO: LISTA_CUERPO CUERPO .

    $default  reduce usando la regla 2 (LISTA_CUERPO)


Estado 60

   11 LISTA_REPETIR: LISTA_REPETIR REPETIR .

    $default  reduce usando la regla 11 (LISTA_REPETIR)


Estado 61

   15 LISTA_FOR: LISTA_FOR FOR .

    $default  reduce usando la regla 15 (LISTA_FOR)


Estado 62

   21 LISTA_MOSTRAR: LISTA_MOSTRAR MOSTRAR .

    $default  reduce usando la regla 21 (LISTA_MOSTRAR)


Estado 63

   24 LISTA_IMPRIMIR: LISTA_IMPRIMIR IMPRIMIR .

    $default  reduce usando la regla 24 (LISTA_IMPRIMIR)


Estado 64

   30 LISTA_ASIGNACION: LISTA_ASIGNACION ASIGNACION .

    $default  reduce usando la regla 30 (LISTA_ASIGNACION)


Estado 65

   33 LISTA_VAR: LISTA_VAR tk_igual . CONT_VALOR

    identificador  desplazar e ir al estado 11
    entero         desplazar e ir al estado 12
    decimal        desplazar e ir al estado 13
    caracter       desplazar e ir al estado 14
    booleano       desplazar e ir al estado 15
    cadena         desplazar e ir al estado 16
    pari           desplazar e ir al estado 17
    menos          desplazar e ir al estado 18

    CONT_VALOR  ir al estado 101
    A           ir al estado 41
    OPERACION   ir al estado 42
    E           ir al estado 43
    VALOR       ir al estado 44


Estado 66

   32 ASIGNACION: LISTA_VAR puntocoma .

    $default  reduce usando la regla 32 (ASIGNACION)


Estado 67

   35 LISTA_DECLARACION: LISTA_DECLARACION DECLARACION .

    $default  reduce usando la regla 35 (LISTA_DECLARACION)


Estado 68

   54 LISTA_ID: identificador .

    $default  reduce usando la regla 54 (LISTA_ID)


Estado 69

   39 DECLARACION: TIPO_DATO tk_arreglo . LISTA_ID LISTA_DIMENSION puntocoma
   40            | TIPO_DATO tk_arreglo . LISTA_ID LISTA_DIMENSION tk_igual llavei ARRAY llaved puntocoma
   41            | TIPO_DATO tk_arreglo . LISTA_ID LISTA_DIMENSION tk_igual llavei LISTA_FILA llaved puntocoma

    identificador  desplazar e ir al estado 68

    LISTA_ID  ir al estado 102


Estado 70

   37 DECLARACION: TIPO_DATO LISTA_ID . tk_igual CONT_VALOR puntocoma
   38            | TIPO_DATO LISTA_ID . puntocoma
   53 LISTA_ID: LISTA_ID . coma identificador

    tk_igual   desplazar e ir al estado 103
    coma       desplazar e ir al estado 104
    puntocoma  desplazar e ir al estado 105


Estado 71

   59 A: A tk_menorque . A
